--- a/admin/pages/billing.html
+++ b/admin/pages/billing.html
@@ -61,6 +61,29 @@
           </a>
         </li>
         <li class="nav-item">
+                    <a class="nav-link active bg-gradient-dark text-white" data-bs-toggle="collapse" href="#blogMenu" role="button" aria-expanded="false" aria-controls="blogMenu">
+                        <i class="material-symbols-rounded opacity-5">article</i>
+                        <span class="nav-link-text ms-1">Blog</span>
+                    </a>
+
+                    <div class="collapse ms-4" id="blogMenu">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="../pages/view-blog.php">
+                                    <i class="material-symbols-rounded opacity-5">visibility</i>
+                                    <span class="nav-link-text ms-1">View Blogs</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="../pages/blog-create.php">
+                                    <i class="material-symbols-rounded opacity-5">add_circle</i>
+                                    <span class="nav-link-text ms-1">Create Blog</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+        <li class="nav-item">
           <a class="nav-link active bg-gradient-dark text-white" href="../pages/billing.html">
             <i class="material-symbols-rounded opacity-5">receipt_long</i>
             <span class="nav-link-text ms-1">Billing</span>
