--- a/course-details.html
+++ b/course-details.html
@@ -46,7 +46,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                                         <li><a href="https://demo.hasthemes.com/jones-preview/jones/course-details.html#">French</a></li>
                                     </ul>
                                 </div>
-                                <a href="https://demo.hasthemes.com/jones-preview/jones/signup.html"><i class="fa fa-user"></i>sign up</a>
+                                <a href="signup.php"><i class="fa fa-user"></i>sign up</a>
                                 <a href="https://demo.hasthemes.com/jones-preview/jones/course-details.html#" class="modal-view button" data-toggle="modal" data-target="#login_box"><i class="fa fa-lock"></i>login</a>
                             </div>
                         </div>
@@ -102,7 +102,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                                                         </li><li><a href="https://demo.hasthemes.com/jones-preview/jones/blog-details.html">Blog Details</a>
                                                         </li><li><a href="https://demo.hasthemes.com/jones-preview/jones/blog-left-sidebar.html">Blog Left Sidebar</a>
                                                         </li><li><a href="https://demo.hasthemes.com/jones-preview/jones/membership.html">Membership</a>
-                                                        </li><li><a href="https://demo.hasthemes.com/jones-preview/jones/signup.html">Signup Page</a>
+                                                        </li><li><a href="signup.php">Signup Page</a>
                                                         </li><li><a href="https://demo.hasthemes.com/jones-preview/jones/contact.html">Contact Page</a>
                                                     </li></ul>
                                                 </li>
@@ -572,7 +572,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                                 <h4>links</h4>
                                 <ul class="footer-widget-list">
                                     <li><a href="https://demo.hasthemes.com/jones-preview/jones/about.html">About us</a></li>
-                                    <li><a href="https://demo.hasthemes.com/jones-preview/jones/signup.html">register</a></li>
+                                    <li><a href="signup.php">register</a></li>
                                     <li><a href="https://demo.hasthemes.com/jones-preview/jones/course.html">Courses</a></li>
                                     <li><a href="https://demo.hasthemes.com/jones-preview/jones/event.html">Event</a></li>
                                     <li><a href="https://demo.hasthemes.com/jones-preview/jones/blog.html">Blog</a></li>
